2004-01-30  Stefan Jahn  <stefan@lkcc.org>

	* ccvs.cpp, strafo.cpp, trafo.cpp: Implemented MNA matrix 
	values for DC simulation.

2004-01-28  Stefan Jahn  <stefan@lkcc.org>

	* cccs.cpp, idc.cpp, vccs.cpp, vcvs.cpp, vdc.cpp: Applied
	new scheme necessary for the MNA matrices.

2004-01-24  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.h (class msline): New class being a 
	template for the microstrip library components.

	* microstrip/substrate.h (class substrate): New class 
	representing a microstrip substrate.

2004-01-13  Stefan Jahn  <stefan@lkcc.org>

	* tline.cpp, gyrator.cpp, phaseshifter.cpp: New components.
	Made appropriate changes in netlist input parser and 
	Makefiles.

2003-12-26  Stefan Jahn  <stefan@lkcc.org>

	* resistor.cpp: Implemented calcG() method for DC analysis.

	* component_id.h: New file containing the circuit identifiers
	for each know circuit.

2003-12-20  Stefan Jahn  <stefan@lkcc.org>

	* vdc.cpp, idc.cpp, vac.cpp: New components.

	* itrafo.cpp: Using a port impedance dependent turns ratio
	the component is now used to allow other port impedances than
	50 Ohms.

2003-12-07  Stefan Jahn  <stefan@lkcc.org>

	* strafo.cpp: New component.  Symmetrical 6-port 
	transformator.

2003-12-01  Stefan Jahn  <stefan@lkcc.org>

	* itrafo.cpp, itrafo.h: New component.  The ideal 3-port 
	transformator is for allowing differential s parameter ports 
	only.