@@ -1,0 +1,38 @@
+#FIG 3.2
+Landscape
+Center
+Inches
+Letter  
+100.00
+Single
+-2
+1200 2
+5 1 0 2 0 7 50 0 -1 0.000 0 0 0 0 7725.000 3000.000 7725 2700 8025 3000 7725 3300
+5 1 0 2 0 7 50 0 -1 0.000 0 1 0 0 8400.000 3000.000 8400 2700 8100 3000 8400 3300
+6 7436 2216 7601 2386
+4 1 0 50 0 0 12 0.0000 0 135 60 7466 2351 I\001
+4 1 0 50 0 0 8 0.0000 0 90 90 7556 2386 in\001
+-6
+6 8506 2241 8739 2406
+4 1 0 50 0 0 12 0.0000 0 135 60 8536 2376 I\001
+4 1 0 50 0 0 8 0.0000 0 75 165 8656 2406 out\001
+-6
+1 3 0 2 0 7 40 0 20 0.000 1 0.0000 7275 2475 75 75 7275 2475 7200 2475
+1 3 0 2 0 7 40 0 20 0.000 1 0.0000 7275 3525 75 75 7275 3525 7200 3525
+1 3 0 2 0 7 40 0 20 0.000 1 0.0000 8850 3525 75 75 8850 3525 8775 3525
+1 3 0 2 0 7 40 0 20 0.000 1 0.0000 8850 2475 75 75 8850 2475 8775 2475
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 4
+	 7350 2475 7725 2475 7725 3525 7350 3525
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 4
+	 8775 2475 8400 2475 8400 3525 8775 3525
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 1 2
+	1 1 1.00 60.00 120.00
+	 8510 2475 8735 2475
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 1 2
+	1 1 1.00 60.00 120.00
+	 7630 2475 7405 2475
+4 0 0 50 0 0 12 0.0000 0 135 90 9075 3600 3\001
+4 0 0 50 0 0 12 0.0000 0 135 90 9075 2550 2\001
+4 0 0 50 0 0 12 0.0000 0 135 90 6900 2550 1\001
+4 0 0 50 0 0 12 0.0000 0 135 90 6900 3600 4\001
+4 0 0 50 0 0 12 0.0000 0 135 120 8025 2625 R\001
