@@ -1,3 +1,7 @@
+2004-01-31  Stefan Jahn  <stefan@lkcc.org>
+
+	* gyrator.cpp: Implemented MNA matrix values for DC simulation.
+
 2004-01-30  Stefan Jahn  <stefan@lkcc.org>
 
 	* ccvs.cpp, strafo.cpp, trafo.cpp: Implemented MNA matrix 
